--- a/environment_windows.yml
+++ b/environment_windows.yml
@@ -24,8 +24,8 @@ dependencies:
   - nose
   - coverage
   - gprof2dot
-  #- cairo
-  #- cairocffi
+  - cairo
+  - cairocffi
   - openbabel
   - psutil
   - symmetry
